Refactor preference relevant classes
Redesign `SearchPreference` and `SearchInfo`
Show error alert if the target folder not found

--- a/DuplicateFinder/Base.lproj/Main.storyboard
+++ b/DuplicateFinder/Base.lproj/Main.storyboard
@@ -128,19 +128,22 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3gY-kT-Tt4">
+                            <button horizontalHuggingPriority="255" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3gY-kT-Tt4">
                                 <rect key="frame" x="392" y="353" width="94" height="32"/>
                                 <buttonCell key="cell" type="push" title="開始檢查" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Sk1-ya-Qls">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="submitBtnPressed:" target="XfG-lQ-9wD" id="2GJ-E3-mjX"/>
+                                    <action selector="didClickCheckButton:" target="XfG-lQ-9wD" id="vXX-VL-wJ4"/>
                                 </connections>
                             </button>
                             <textField horizontalHuggingPriority="245" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eaf-9B-V8a">
                                 <rect key="frame" x="30" y="359" width="358" height="22"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="選擇資料夾" bezelStyle="round" id="Bu1-Sn-fLv">
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="350" id="U88-Ag-kOJ"/>
+                                </constraints>
+                                <textFieldCell key="cell" lineBreakMode="truncatingHead" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="left" placeholderString="選擇資料夾" bezelStyle="round" id="Bu1-Sn-fLv">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -218,27 +221,27 @@
                             <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="iXW-OL-0TZ">
                                 <rect key="frame" x="31" y="189" width="41" height="19"/>
                                 <segmentedCell key="cell" controlSize="mini" borderStyle="border" alignment="left" style="smallSquare" trackingMode="momentary" id="6ON-BF-g1r">
-                                    <font key="font" metaFont="label" size="9"/>
+                                    <font key="font" metaFont="menu" size="9"/>
                                     <segments>
                                         <segment image="NSAddTemplate"/>
                                         <segment image="NSRemoveTemplate" enabled="NO" tag="1"/>
                                     </segments>
                                 </segmentedCell>
                                 <connections>
-                                    <action selector="addFolderSegmentPressed:" target="XfG-lQ-9wD" id="AbL-c7-qga"/>
+                                    <action selector="didChangeValueOfExcludeSegment:" target="XfG-lQ-9wD" id="FX9-5t-q6X"/>
                                 </connections>
                             </segmentedControl>
                             <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="784-HS-mz6">
                                 <rect key="frame" x="438" y="19" width="41" height="19"/>
                                 <segmentedCell key="cell" controlSize="mini" borderStyle="border" alignment="left" style="smallSquare" trackingMode="momentary" id="Gpl-Do-b3G">
-                                    <font key="font" metaFont="label" size="9"/>
+                                    <font key="font" metaFont="menu" size="9"/>
                                     <segments>
                                         <segment image="NSAddTemplate"/>
                                         <segment image="NSRemoveTemplate" enabled="NO" tag="1"/>
                                     </segments>
                                 </segmentedCell>
                                 <connections>
-                                    <action selector="addFolderSegmentPressed:" target="XfG-lQ-9wD" id="ehr-88-7uq"/>
+                                    <action selector="didChangeValueOfExcludeSegment:" target="XfG-lQ-9wD" id="deR-4L-bjN"/>
                                 </connections>
                             </segmentedControl>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Glk-hL-4dd">
@@ -364,14 +367,14 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="addExcludeFileNameSegmentControl" destination="784-HS-mz6" id="mCN-90-wRo"/>
-                        <outlet property="addFolderSegmentControl" destination="iXW-OL-0TZ" id="Z7i-Wv-A4i"/>
                         <outlet property="checkButton" destination="3gY-kT-Tt4" id="QNJ-J5-ahv"/>
                         <outlet property="excludeFileNameTableView" destination="fcu-eM-fIh" id="05d-Nb-NMy"/>
                         <outlet property="excludeFileNameTextField" destination="8fT-UO-MJx" id="Me4-6S-Te4"/>
                         <outlet property="excludeFolderTableView" destination="lIb-3a-OlV" id="UMX-Hn-MBL"/>
+                        <outlet property="excludedFileNamesSegmentControl" destination="784-HS-mz6" id="32y-xU-U1b"/>
                         <outlet property="excludedFolderTitleLabel" destination="Glk-hL-4dd" id="6ZY-pd-1eE"/>
                         <outlet property="excludedNamesTitleLabel" destination="G14-yB-dal" id="dCq-4i-T2c"/>
+                        <outlet property="excludedPathsSegmentControl" destination="iXW-OL-0TZ" id="B0W-zb-xgI"/>
                         <outlet property="filePathTextField" destination="eaf-9B-V8a" id="Z0L-lv-ddk"/>
                         <outlet property="titleLabel" destination="qkg-Oc-27v" id="NZW-SR-gbl"/>
                     </connections>
@@ -414,7 +417,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1PV-yo-DUh">
-                                <rect key="frame" x="30" y="130" width="130" height="130"/>
+                                <rect key="frame" x="30" y="140" width="130" height="130"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="130" id="Ucn-Ie-nUc"/>
                                     <constraint firstAttribute="width" secondItem="1PV-yo-DUh" secondAttribute="height" multiplier="1:1" id="rBx-XT-aM8"/>
@@ -431,15 +434,25 @@
                                     <action selector="didClickPreferenceButton:" target="Me5-Ig-8Zm" id="8i0-Df-PwC"/>
                                 </connections>
                             </button>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="hCq-85-Fgn">
+                                <rect key="frame" x="33" y="121" width="124" height="19"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Duplicate Finder" id="Y5V-OL-WeV">
+                                    <font key="font" metaFont="systemBold" size="15"/>
+                                    <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="hCq-85-Fgn" firstAttribute="centerX" secondItem="1PV-yo-DUh" secondAttribute="centerX" id="3au-Mk-Rq7"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="aGH-m2-Wr4" secondAttribute="trailing" constant="30" id="3rm-Bv-ioq"/>
                             <constraint firstItem="aGH-m2-Wr4" firstAttribute="centerX" secondItem="1PV-yo-DUh" secondAttribute="centerX" id="8uM-VI-lRM"/>
                             <constraint firstItem="1PV-yo-DUh" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RBd-p6-DWW" secondAttribute="leading" constant="30" id="EsC-UN-4lQ"/>
                             <constraint firstAttribute="bottom" secondItem="aGH-m2-Wr4" secondAttribute="bottom" constant="30" id="FZ8-jf-eO9"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1PV-yo-DUh" secondAttribute="trailing" constant="30" id="SR0-yW-KgN"/>
+                            <constraint firstItem="hCq-85-Fgn" firstAttribute="top" secondItem="1PV-yo-DUh" secondAttribute="bottom" id="TVF-gF-wj4"/>
                             <constraint firstItem="aGH-m2-Wr4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RBd-p6-DWW" secondAttribute="leading" constant="30" id="Uya-tk-5ZL"/>
-                            <constraint firstItem="1PV-yo-DUh" firstAttribute="top" secondItem="RBd-p6-DWW" secondAttribute="top" constant="40" id="WXy-tb-haz"/>
+                            <constraint firstItem="1PV-yo-DUh" firstAttribute="top" secondItem="RBd-p6-DWW" secondAttribute="top" constant="30" id="WXy-tb-haz"/>
                         </constraints>
                     </view>
                     <connections>
